# twirp-haskell

./: .gitignore  LICENSE  README.md  cabal.project  go.mod  go.sum  package.yaml  stack.yaml  twirp.cabal
.github/workflows/: ci.yml
app/: Main.hs
app/Proto/: Haberdasher.hs  Haberdasher_Fields.hs  Haberdasher_JSON.hs
app/Twirp/Example/: Haberdasher.hs  HaberdasherPB.hs
app/Twirp/Example/Haberdasher/: Haberdasher.hs  HaberdasherPB.hs  Wrapping.hs  WrappingPB.hs
clients/python/: client.py
clients/python/haberdasher/: __init__.py  haberdasher_pb2.py  haberdasher_pb2_twirp.py
example/: cabal.project  example.cabal
example/app/: Main.hs
example/app/Proto/: Haberdasher.hs  Haberdasher_Fields.hs  Haberdasher_JSON.hs
example/app/Twirp/Example/Haberdasher/: Haberdasher.hs
proto/: haberdasher.proto  wrapping.proto
proto/protoc-gen-haskell/: extensions.proto
proto/twirp/: haskell.proto
proto/twirp/protobuf/: haskell.proto
protoc-gen-haskell/: REAME.md  haskell.pb.go  main.go
protoc-gen-haskell/twirp/: haskell.pb.go
protoc-gen-haskell/twirp/protobuf/: haskell.pb.go
protoc-gen-jsonpb_haskell/: main.go
protoc-gen-twirp_haskell/: README.md  haskell.pb.go  main.go
script/: build-and-upload  protoc  protoc-python-client  run  run-haskell  run-jsonpb_haskell  run-twirp_haskell
src/: Twirp.hs
src/Twirp/: JSONPB.hs
src/Twirp/JSONPB/: Class.hs
src/Twirp/Middleware/: Errors.hs
