cabal-version:  2.4

name:           twirp
version:        0.1.0.0
synopsis:       Haskell twirp foundations
description:    Please see the README on GitHub at <https://github.com/tclem/twirp-haskell#readme>
homepage:       https://github.com/tclem/twirp-haskell#readme
bug-reports:    https://github.com/tclem/twirp-haskell/issues
license:        BSD-3-Clause
license-file:   LICENSE
author:         Timothy Clem
maintainer:     timothy.clem@gmail.com
copyright:      2019 Timothy Clem
build-type:     Simple
extra-source-files: README.md

tested-with:    GHC == 8.6.5

-- GHC extensions shared between targets
common haskell
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

common dependencies
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , microlens
    , proto-lens
    , proto-lens-json
    , proto-lens-runtime

library
  import: haskell, dependencies
  exposed-modules:
      Twirp
      Twirp.Middleware.Errors
  other-modules:
      Paths_twirp
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , deepseq
    , http-media
    , http-types
    , random
    , servant
    , servant-server
    , text
    , vector
    , wai
    , warp

executable twirp-example
  import: haskell, dependencies
  main-is: Main.hs
  other-modules:
      Proto.Haberdasher
      Proto.Haberdasher_Fields
      Twirp.Example.Haberdasher.Haberdasher
      Paths_twirp
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , deepseq
    , http-media
    , http-types
    , random
    , servant
    , servant-server
    , text
    , twirp
    , vector
    , wai
    , warp

test-suite twirp-test
  import: haskell, dependencies
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_twirp
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , deepseq
    , http-media
    , http-types
    , random
    , servant
    , servant-server
    , text
    , twirp
    , vector
    , wai
    , warp

source-repository head
  type: git
  location: https://github.com/tclem/twirp-haskell
