cabal-version:  2.4

name:           twirp-example
version:        0.2.1.0
synopsis:       Haskell twirp foundations
description:    Please see the README on GitHub at <https://github.com/tclem/twirp-haskell#readme>
homepage:       https://github.com/tclem/twirp-haskell#readme
bug-reports:    https://github.com/tclem/twirp-haskell/issues
license:        BSD-3-Clause
author:         Timothy Clem
maintainer:     timothy.clem@gmail.com
copyright:      2019 Timothy Clem
category:       Web
build-type:     Simple

tested-with:    GHC == 8.6.5
              , GHC == 8.8.1
              , GHC == 8.10.1

-- GHC extensions shared between targets
common haskell
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

common dependencies
  build-depends:
      base >=4.7 && <5
    , aeson ^>= 1.4.5.0
    , bytestring >= 0.10.8
    , http-media >= 0.8.0.0
    , http-types >= 0.12.3
    , proto-lens >= 0.5.0.0
    , proto-lens-jsonpb >= 0.1.0.0
    , proto-lens-runtime >= 0.7
    , servant ^>= 0.18
    , text ^>= 1.2.3.2
    , wai ^>= 3.2.2.1

executable twirp-example
  import: haskell, dependencies
  main-is: Main.hs
  other-modules:
      Proto.Haberdasher
      Proto.Haberdasher_Fields
      Proto.Haberdasher_JSON
      Twirp.Example.Haberdasher.Haberdasher
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      twirp
    , microlens
    , random
    , servant-server
    , warp

source-repository head
  type: git
  location: https://github.com/tclem/twirp-haskell
